--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ target_compile_options(glad PRIVATE "-O3" "-march=native")
 add_executable(serena sandbox/main.cpp serena.hpp)
 target_include_directories(serena PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(serena PUBLIC glfw glad)
+target_compile_definitions(serena PRIVATE ROOT="${CMAKE_CURRENT_SOURCE_DIR}/sandbox/")
